修复头像
